Fix flask tests