@@ -25,8 +25,17 @@ then
   mvn -B clean package
 fi
 
+out_folder=samples/server/petstore/python-aiohttp
+
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
-ags="generate -t modules/openapi-generator/src/main/resources/python-aiohttp -i modules/openapi-generator/src/test/resources/2_0/petstore.yaml -g python-aiohttp -o samples/server/petstore/python-aiohttp -Dservice $@"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
+ags="generate -t modules/openapi-generator/src/main/resources/python-aiohttp -i modules/openapi-generator/src/test/resources/2_0/petstore.yaml -g python-aiohttp -o $out_folder -Dservice $@"
+
+rm -rf $out_folder/.openapi*
+rm -rf $out_folder/openapi_server
+rm -rf $out_folder/tests*
+rm $out_folder/README.md
+rm $out_folder/requirements.txt
+rm $out_folder/test-requirements.txt
 
 java $JAVA_OPTS -jar $executable $ags
